# ai_media_library

./: .env.example  .gitignore  .gitmodules  Makefile  README.en.md  README.md  docker-compose.yaml  pyproject.toml
apps/core/: admin.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_alter_projectsettings_options.py  0002_remove_projectsettings_chat_prompt.py  0003_projectsettings_concept_extraction_prompt_and_more.py  0004_alter_projectsettings_concept_extraction_prompt_and_more.py  0005_alter_projectsettings_concept_extraction_prompt_and_more.py
apps/core/templatetags/: markdown_extras.py
apps/learning/: admin.py  history.py  models.py  schemas.py  tasks.py  urls.py  views.py
apps/learning/agents/: base.py  concept_extractor.py  plan_generator.py  quiz_generator.py  tutor.py
apps/learning/migrations/: 0001_initial.py  0002_alter_concept_options_alter_flashcard_options_and_more.py  0003_tutorchatsession_tutorchatmessage.py  0004_tutorchatsession_title.py  0005_tutorchatsession_context_id_and_more.py  0006_studyplan_title.py
apps/learning/services/: ai_service.py  srs.py
apps/users/: admin.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
chroma_db/: chroma.sqlite3
config/: settings.py  urls.py
docker-build/web/: Dockerfile
locale/ru/LC_MESSAGES/: django.po
static/css/: style.css
templates/: base.html
templates/core/: settings.html
templates/learning/: dashboard.html  plan_detail.html  quiz.html  session_complete.html  study_session.html  tutor.html
templates/users/: login.html
tests/: conftest.py
